added more static files and profile model

--- a/main_app/templates/main_app/loggedin_base.html
+++ b/main_app/templates/main_app/loggedin_base.html
@@ -32,7 +32,7 @@
               <div class="container">
                 <!-- Logo START -->
                 <a class="navbar-brand me-0" href="{% url 'index' %}">
-                    <img class="navbar-brand-item" style="height: 50px;" src="{% static 'main_app/logo-dark.svg' %}" alt="logo">
+                    <img class="navbar-brand-item" style="height: 40px;" src="{% static 'main_app/arpeggio-placeholder.svg' %}" alt="logo">
                 </a>
                 <!-- Logo END -->
                 <div class="navbar-nav ms-2">
