--- a/main_app/templates/main_app/loggedin_base.html
+++ b/main_app/templates/main_app/loggedin_base.html
@@ -37,7 +37,7 @@
                 <!-- Logo END -->
                 <div class="navbar-nav ms-2">
                   <span class="me-3" style="line-height: 2.2;">Logged in as: <b>{{ request.user.username }}</b></span>
-                  {% comment %} <a class="btn btn-sm btn-dark mb-0" href="{% url 'logout' %}"><i class="bi bi-power me-2"></i>Sign out</a> {% endcomment %}
+                  <a class="btn btn-sm btn-dark mb-0" href="{% url 'logout' %}"><i class="bi bi-power me-2"></i>Sign out</a>
                 </div>
 
               </div>
