--- a/main_app/templates/main_app/lesson_detail_view.html
+++ b/main_app/templates/main_app/lesson_detail_view.html
@@ -42,7 +42,7 @@
                             <!-- Title -->
                             <div class="card-header bg-light rounded-0">
                                 <h1 class="mt-2 fs-5 d-inline" style="line-height: 2.5;">Course content</h1>
-                                <a href="{% url 'index' %}"><img src="{% static 'main_app/logo_pick.svg' %}" class="float-end d-inline" style="width: 15%;" alt="logo-pick"/></a>
+                                <a href="{% url 'index' %}"><img src="{% static 'main_app/logo_icon.svg' %}" class="float-end d-inline" style="width: 15%;" alt="logo-icon"/></a>
                             </div>
 
                             <!-- Course content START -->
