--- a/main_app/static/main_app/css/style-dark.css
+++ b/main_app/static/main_app/css/style-dark.css
@@ -3820,10 +3820,10 @@ textarea.form-control-lg {
 
 .btn-dark {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #0f0f10;
+  --bs-btn-bg: #12223a;
   --bs-btn-border-color: #0f0f10;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #333334;
+  --bs-btn-hover-bg: #0f0f10;
   --bs-btn-hover-border-color: #272728;
   --bs-btn-focus-shadow-rgb: 51, 51, 52;
   --bs-btn-active-color: #fff;
@@ -20249,7 +20249,7 @@ textarea.form-control-lg {
     top: 0;
     left: 0;
     right: 0;
-    background-color: #222529;
+    background-color: #060d18;
     -webkit-animation: fadeInDown 0.5s;
             animation: fadeInDown 0.5s;
     width: 100%;
@@ -20307,7 +20307,7 @@ textarea.form-control-lg {
 .navbar-toggler.plyr-toggler {
   right: 100%;
   position: absolute;
-  background: #43bee9;
+  background: #0fbc87;
   border: 0;
   border-radius: 0;
   border-bottom-left-radius: 0.325rem !important;
@@ -20326,8 +20326,8 @@ textarea.form-control-lg {
   transition: all 0.3s ease-in-out;
   background-image: none;
   position: relative;
-  height: 30px;
-  width: 40px;
+  height: 20px;
+  width: 20px;
   display: inline-block;
   vertical-align: middle;
   background-repeat: no-repeat;
@@ -20521,7 +20521,7 @@ main {
 header {
   position: relative;
   z-index: 1020;
-  background: #101824;
+  background: #060d18;
 }
 
 a {
