--- a/main_app/templates/main_app/lesson_list_view.html
+++ b/main_app/templates/main_app/lesson_list_view.html
@@ -35,7 +35,7 @@
                                     <hr>
                                     <div class="d-flex justify-content-between">
                                         <span class="h6 fw-light mb-0"><i class="far fa-clock text-danger me-2"></i>{{ lesson.length }}m</span>
-                                        {% if lesson.has_file %}<a class="h6 fw-light mb-0" target="_blank" href="{% get_static_prefix %}main_app/pdfs/{{ lesson.thumbnail_id }}.pdf"><i class="fa fa-download text-success me-2"></i>Download Lesson Files</a>{% endif %}
+                                        {% if lesson.has_file %}<a class="h6 fw-light mb-0" target="_blank" href="{% get_static_prefix %}main_app/pdfs/{{ lesson.thumbnail_id }}.pdf"><i class="fa fa-download text-success me-2"></i>Download files</a>{% endif %}
                                     </div>
                                 </div>
                             </div>
