--- a/main_app/templates/main_app/lesson_detail_view.html
+++ b/main_app/templates/main_app/lesson_detail_view.html
@@ -102,7 +102,7 @@
                             <!-- Course content END -->
                             <div class="card-footer" style="background-color: #151d26;">
                                 <div class="d-grid">
-                                    <a href="{% url 'index' %}" class="btn btn-primary-soft mb-0">Back to overview</a>
+                                    <a href="{% url 'index' %}" class="btn btn-primary-soft mb-0 text-white">Back to overview</a>
                                 </div>
                             </div>
                         </div>
