--- a/main_app/static/main_app/css/style-dark.css
+++ b/main_app/static/main_app/css/style-dark.css
@@ -20307,7 +20307,7 @@ textarea.form-control-lg {
 .navbar-toggler.plyr-toggler {
   right: 100%;
   position: absolute;
-  background: #f1592d;
+  background: #ffffff;
   border: 0;
   border-radius: 0;
   border-bottom-left-radius: 0.325rem !important;
