added files and user system

--- a/main_app/templates/registration/login_base.html
+++ b/main_app/templates/registration/login_base.html
@@ -11,7 +11,7 @@
       <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
       <style>
         .login-body {
-          background-image: url("{% static 'main_app/login-bg.jpg' %}");;
+          background-image: url("{% static 'main_app/login-bg-3.png' %}");
           background-attachment: fixed;
         }
       </style>
@@ -21,7 +21,7 @@
       <div class="row justify-content-center align-items-center" style="height: 15vh; margin-top: 140px;">
         <div class="col-md-8 col-lg-6 col-sm-12">
           <div class="login-logo" style="text-align: center;">
-            <img src='{% static 'main_app/login-logo.png' %}' alt="Beato Beginner Guitar" style="height: 230px;">
+            <img src='{% static 'main_app/login-logo.png' %}' alt="Beato Beginner Guitar" style="height: 250px;">
           </div>
         </div>
       </div>
