--- a/main_app/templates/main_app/lesson_detail_view.html
+++ b/main_app/templates/main_app/lesson_detail_view.html
@@ -19,7 +19,7 @@
                 <div class="overflow-hidden fullscreen-video w-100">
                     <!-- Full screen video START -->
                     <div class="video-player rounded-3">
-                        <div style="padding:100vh 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/{{ current_lesson.vimeo_id }}?badge=0&autopause=0&quality_selector=1&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="{{ current_lesson.title }}"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+                        <div style="padding:100vh 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/{{ current_lesson.vimeo_id }}?badge=0&autopause=0&quality_selector=1&player_id=0&app_id=58479&quality=1080p" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="{{ current_lesson.title }}"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
                         </div>
                     <!-- Full screen video END -->
                 </div>
