email auth system

--- a/main_app/templates/main_app/lesson_detail_view.html
+++ b/main_app/templates/main_app/lesson_detail_view.html
@@ -80,7 +80,7 @@
                                                                 <div>
                                                                     <div class="d-flex justify-content-between align-items-center mb-2">
                                                                         <div class="position-relative d-flex align-items-center">
-                                                                            <a href="{% get_static_prefix %}main_app/pdfs/{{ lesson.thumbnail_id }}.pdf" class="btn btn-success-soft btn-round btn-sm mb-0 stretched-link position-static">
+                                                                            <a href="{% get_static_prefix %}main_app/dl-files/{{ lesson.thumbnail_id }}.zip" class="btn btn-success-soft btn-round btn-sm mb-0 stretched-link position-static">
                                                                                 <i class="fas fa-download me-0"></i>
                                                                             </a>
                                                                             <span class="d-inline-block text-truncate ms-2 mb-0 h6 fw-light w-100px w-sm-200px">Download Files</span>
