--- a/templates/registration/login_base.html
+++ b/templates/registration/login_base.html
@@ -21,7 +21,7 @@
       <div class="row justify-content-center align-items-center" style="height: 15vh; margin-top: 140px;">
         <div class="col-md-8 col-lg-6 col-sm-12">
           <div class="login-logo" style="text-align: center;">
-            <img src='{% static 'main_app/login-logo.png' %}' alt="Beato Beginner Guitar" style="height: 250px;">
+            <a href="{% url 'index' %}"><img src='{% static 'main_app/login-logo.png' %}' alt="Beato Beginner Guitar" style="height: 250px;"></a>
           </div>
         </div>
       </div>
