completely reworked user and activation system

--- a/templates/registration/login_base.html
+++ b/templates/registration/login_base.html
@@ -17,7 +17,7 @@
       </style>
   </head>
   <body class="login-body">
-    <div class="container">
+    <div class="container" style="margin-bottom: 300px;">
       <div class="row justify-content-center align-items-center" style="height: 15vh; margin-top: 140px;">
         <div class="col-md-8 col-lg-6 col-sm-12">
           <div class="login-logo" style="text-align: center;">
