--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -8,8 +8,8 @@
 
 {% block login_body %}
 <div class="text-white">
-<h1 class="mb-3">Your password has been changed!</h1>
-<p>Please remember to log in with your username, NOT your email address.</p>
-  <a href="{% url 'login' %}" class="text-white mt-5 text-center" style="font-size: 20px;">Back to log in</a>
+<h2 class="mb-3">Your password has been set!</h2>
+<p>You can now log in with your email address and new password.</p>
+  <a href="{% url 'login' %}" class="text-white mt-5 text-center" style="font-size: 20px;">Go to log in</a>
 </div>
 {% endblock %}
