--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -47,12 +47,12 @@
         {% endif %}
       </div>
     {% endfor %}
-    <button type="submit" class="btn btn-success ">Change my password</button>
+    <button type="submit" class="btn btn-success ">Set my password</button>
   </form>
   {% else %}
 
 <p class="text-white">The password reset link was invalid, possibly because it has already been used.  Please request a new password reset.</p>
-<a href="{% url 'login' %}" class="text-white mt-5" style="font-size: 14px;">< Back to log in</a>
+<a href="{% url 'login' %}" class="text-white mt-5" style="font-size: 14px;">Go to log in</a>
 
 {% endif %}
 {% endblock %}
