--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -11,6 +11,6 @@
 <h1 class="mb-3">Your password reset link has been sent!</h1>
     <p>If your email exists in our database, an email has been sent to you!</p>
   <p>Click the link in the email to choose your new password!</p>
-  <a href="{% url 'login' %}" class="text-white mt-5" style="font-size: 14px;">< Back to log in</a>
+  <a href="{% url 'login' %}" class="text-white mt-5" style="font-size: 14px;">Go to log in</a>
 </div>
 {% endblock %}
