--- a/templates/registration/login_base.html
+++ b/templates/registration/login_base.html
@@ -26,7 +26,7 @@
         </div>
       </div>
         <div class="row justify-content-center align-items-center" style="margin-top: 130px;">
-            <div class="col-md-12 col-lg-6 col-sm-12">
+            <div class="col-md-12 col-lg-6 col-sm-12 text-center">
                 {% block login_body %}
                 {% endblock %}
             </div>
