--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -10,6 +10,6 @@
 <div class="text-white">
 <h2 class="mb-3">Your password has been set!</h2>
 <p>You can now log in with your email address and new password.</p>
-  <a href="{% url 'login' %}" class="text-white mt-5 text-center" style="font-size: 20px;">Go to log in</a>
+  <a href="{% url 'login' %}" class="btn btn-primary" style="font-size: 20px;">Go to log in</a>
 </div>
 {% endblock %}
