--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -48,9 +48,11 @@
     <div class="mt-5" style="text-align: center;">
     <button type="submit" class="btn btn-primary login-button">Login</button>
   </div>
-  <div class="text-center mt-3">
+  <div class="text-center mt-4" style="text-underline-offset: 3px;">
   <a href="{% url 'password_reset' %}" class="d-block" style="font-size: 16px; color: #43bee9;">Forgot Password?</a>
   <a href="https://beatoguitar.com/" class="d-block mt-3" style="font-size: 16px; color: #43bee9;">Don't have an account? Sign up here</a>
+  <br>
+  <a href="https://beatoguitar.com/pages/contact" class="d-block mt-3" style="font-size: 14px; color: #fff;">Need help with something else? Contact us</a>
 
   </div>
   </form>
